// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist component should render list properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Playlists
    fetchInitialPlaylists={[Function]}
    loadingPlaylists={false}
    loggedUser={null}
    onLogout={[Function]}
    playlists={
        Object {
            "message": "myMessage",
            "playlists": Object {
              "items": Array [
                Object {
                  "external_urls": Object {
                    "spotify": "mylink",
                  },
                  "id": "6ftJBzU2LLQcaKefMi7ee7",
                  "images": Array [
                    Object {
                      "url": "myotherlink",
                    },
                  ],
                  "name": "my playlist",
                  "owner": Object {
                    "external_urls": Object {
                      "spotify": "owner link",
                    },
                    "id": "ownerid",
                  },
                },
                Object {
                  "external_urls": Object {
                    "spotify": "mylink",
                  },
                  "id": "6ftJBzU2LLQcaKefMi7ee7",
                  "images": Array [
                    Object {
                      "url": "myotherlink",
                    },
                  ],
                  "name": "dif name",
                  "owner": Object {
                    "external_urls": Object {
                      "spotify": "owner link",
                    },
                    "id": "ownerid",
                  },
                },
              ],
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="playlists__content"
>
        <div
                className="playlists__header"
        >
                <div
                        className="playlists__message"
                >
                        myMessage
                </div>
                <UserInfo
                        onLogout={[Function]}
                        user={null}
                />
        </div>
        <div
                className="playlists__filter"
        >
                <TextField
                        disabled={false}
                        floatingLabelFixed={false}
                        fullWidth={true}
                        hintText="Filter"
                        multiLine={false}
                        onChange={[Function]}
                        rows={1}
                        type="text"
                        underlineShow={true}
                        value=""
                />
        </div>
        <div
                className="playlists__list-container"
        >
                <div
                        className="playlists__list"
                >
                        <PlaylistCard
                                playlist={
                                        Object {
                                                "external_urls": Object {
                                                  "spotify": "mylink",
                                                },
                                                "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                "images": Array [
                                                  Object {
                                                    "url": "myotherlink",
                                                  },
                                                ],
                                                "name": "my playlist",
                                                "owner": Object {
                                                  "external_urls": Object {
                                                    "spotify": "owner link",
                                                  },
                                                  "id": "ownerid",
                                                },
                                              }
                                }
                        />
                        <PlaylistCard
                                playlist={
                                        Object {
                                                "external_urls": Object {
                                                  "spotify": "mylink",
                                                },
                                                "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                "images": Array [
                                                  Object {
                                                    "url": "myotherlink",
                                                  },
                                                ],
                                                "name": "dif name",
                                                "owner": Object {
                                                  "external_urls": Object {
                                                    "spotify": "owner link",
                                                  },
                                                  "id": "ownerid",
                                                },
                                              }
                                }
                        />
                </div>
        </div>
</div>,
      "className": "playlists",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="playlists__header"
>
            <div
                        className="playlists__message"
            >
                        myMessage
            </div>
            <UserInfo
                        onLogout={[Function]}
                        user={null}
            />
</div>,
          <div
            className="playlists__filter"
>
            <TextField
                        disabled={false}
                        floatingLabelFixed={false}
                        fullWidth={true}
                        hintText="Filter"
                        multiLine={false}
                        onChange={[Function]}
                        rows={1}
                        type="text"
                        underlineShow={true}
                        value=""
            />
</div>,
          <div
            className="playlists__list-container"
>
            <div
                        className="playlists__list"
            >
                        <PlaylistCard
                                    playlist={
                                                Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "my playlist",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                                    }
                        />
                        <PlaylistCard
                                    playlist={
                                                Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "dif name",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                                    }
                        />
            </div>
</div>,
        ],
        "className": "playlists__content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="playlists__message"
>
                myMessage
</div>,
              <UserInfo
                onLogout={[Function]}
                user={null}
/>,
            ],
            "className": "playlists__header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "myMessage",
                "className": "playlists__message",
              },
              "ref": null,
              "rendered": "myMessage",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "onLogout": [Function],
                "user": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <TextField
              disabled={false}
              floatingLabelFixed={false}
              fullWidth={true}
              hintText="Filter"
              multiLine={false}
              onChange={[Function]}
              rows={1}
              type="text"
              underlineShow={true}
              value=""
/>,
            "className": "playlists__filter",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "floatingLabelFixed": false,
              "fullWidth": true,
              "hintText": "Filter",
              "multiLine": false,
              "onChange": [Function],
              "rows": 1,
              "type": "text",
              "underlineShow": true,
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="playlists__list"
>
              <PlaylistCard
                            playlist={
                                          Object {
                                                        "external_urls": Object {
                                                          "spotify": "mylink",
                                                        },
                                                        "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                        "images": Array [
                                                          Object {
                                                            "url": "myotherlink",
                                                          },
                                                        ],
                                                        "name": "my playlist",
                                                        "owner": Object {
                                                          "external_urls": Object {
                                                            "spotify": "owner link",
                                                          },
                                                          "id": "ownerid",
                                                        },
                                                      }
                            }
              />
              <PlaylistCard
                            playlist={
                                          Object {
                                                        "external_urls": Object {
                                                          "spotify": "mylink",
                                                        },
                                                        "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                        "images": Array [
                                                          Object {
                                                            "url": "myotherlink",
                                                          },
                                                        ],
                                                        "name": "dif name",
                                                        "owner": Object {
                                                          "external_urls": Object {
                                                            "spotify": "owner link",
                                                          },
                                                          "id": "ownerid",
                                                        },
                                                      }
                            }
              />
</div>,
            "className": "playlists__list-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <PlaylistCard
                  playlist={
                                    Object {
                                                      "external_urls": Object {
                                                        "spotify": "mylink",
                                                      },
                                                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                      "images": Array [
                                                        Object {
                                                          "url": "myotherlink",
                                                        },
                                                      ],
                                                      "name": "my playlist",
                                                      "owner": Object {
                                                        "external_urls": Object {
                                                          "spotify": "owner link",
                                                        },
                                                        "id": "ownerid",
                                                      },
                                                    }
                  }
/>,
                <PlaylistCard
                  playlist={
                                    Object {
                                                      "external_urls": Object {
                                                        "spotify": "mylink",
                                                      },
                                                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                      "images": Array [
                                                        Object {
                                                          "url": "myotherlink",
                                                        },
                                                      ],
                                                      "name": "dif name",
                                                      "owner": Object {
                                                        "external_urls": Object {
                                                          "spotify": "owner link",
                                                        },
                                                        "id": "ownerid",
                                                      },
                                                    }
                  }
/>,
              ],
              "className": "playlists__list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "6ftJBzU2LLQcaKefMi7ee7",
                "nodeType": "class",
                "props": Object {
                  "playlist": Object {
                    "external_urls": Object {
                      "spotify": "mylink",
                    },
                    "id": "6ftJBzU2LLQcaKefMi7ee7",
                    "images": Array [
                      Object {
                        "url": "myotherlink",
                      },
                    ],
                    "name": "my playlist",
                    "owner": Object {
                      "external_urls": Object {
                        "spotify": "owner link",
                      },
                      "id": "ownerid",
                    },
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "6ftJBzU2LLQcaKefMi7ee7",
                "nodeType": "class",
                "props": Object {
                  "playlist": Object {
                    "external_urls": Object {
                      "spotify": "mylink",
                    },
                    "id": "6ftJBzU2LLQcaKefMi7ee7",
                    "images": Array [
                      Object {
                        "url": "myotherlink",
                      },
                    ],
                    "name": "dif name",
                    "owner": Object {
                      "external_urls": Object {
                        "spotify": "owner link",
                      },
                      "id": "ownerid",
                    },
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="playlists__content"
>
          <div
                    className="playlists__header"
          >
                    <div
                              className="playlists__message"
                    >
                              myMessage
                    </div>
                    <UserInfo
                              onLogout={[Function]}
                              user={null}
                    />
          </div>
          <div
                    className="playlists__filter"
          >
                    <TextField
                              disabled={false}
                              floatingLabelFixed={false}
                              fullWidth={true}
                              hintText="Filter"
                              multiLine={false}
                              onChange={[Function]}
                              rows={1}
                              type="text"
                              underlineShow={true}
                              value=""
                    />
          </div>
          <div
                    className="playlists__list-container"
          >
                    <div
                              className="playlists__list"
                    >
                              <PlaylistCard
                                        playlist={
                                                  Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "my playlist",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                                        }
                              />
                              <PlaylistCard
                                        playlist={
                                                  Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "dif name",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                                        }
                              />
                    </div>
          </div>
</div>,
        "className": "playlists",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="playlists__header"
>
              <div
                            className="playlists__message"
              >
                            myMessage
              </div>
              <UserInfo
                            onLogout={[Function]}
                            user={null}
              />
</div>,
            <div
              className="playlists__filter"
>
              <TextField
                            disabled={false}
                            floatingLabelFixed={false}
                            fullWidth={true}
                            hintText="Filter"
                            multiLine={false}
                            onChange={[Function]}
                            rows={1}
                            type="text"
                            underlineShow={true}
                            value=""
              />
</div>,
            <div
              className="playlists__list-container"
>
              <div
                            className="playlists__list"
              >
                            <PlaylistCard
                                          playlist={
                                                        Object {
                                                                      "external_urls": Object {
                                                                        "spotify": "mylink",
                                                                      },
                                                                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                                      "images": Array [
                                                                        Object {
                                                                          "url": "myotherlink",
                                                                        },
                                                                      ],
                                                                      "name": "my playlist",
                                                                      "owner": Object {
                                                                        "external_urls": Object {
                                                                          "spotify": "owner link",
                                                                        },
                                                                        "id": "ownerid",
                                                                      },
                                                                    }
                                          }
                            />
                            <PlaylistCard
                                          playlist={
                                                        Object {
                                                                      "external_urls": Object {
                                                                        "spotify": "mylink",
                                                                      },
                                                                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                                      "images": Array [
                                                                        Object {
                                                                          "url": "myotherlink",
                                                                        },
                                                                      ],
                                                                      "name": "dif name",
                                                                      "owner": Object {
                                                                        "external_urls": Object {
                                                                          "spotify": "owner link",
                                                                        },
                                                                        "id": "ownerid",
                                                                      },
                                                                    }
                                          }
                            />
              </div>
</div>,
          ],
          "className": "playlists__content",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="playlists__message"
>
                  myMessage
</div>,
                <UserInfo
                  onLogout={[Function]}
                  user={null}
/>,
              ],
              "className": "playlists__header",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "myMessage",
                  "className": "playlists__message",
                },
                "ref": null,
                "rendered": "myMessage",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "onLogout": [Function],
                  "user": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <TextField
                disabled={false}
                floatingLabelFixed={false}
                fullWidth={true}
                hintText="Filter"
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="text"
                underlineShow={true}
                value=""
/>,
              "className": "playlists__filter",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "disabled": false,
                "floatingLabelFixed": false,
                "fullWidth": true,
                "hintText": "Filter",
                "multiLine": false,
                "onChange": [Function],
                "rows": 1,
                "type": "text",
                "underlineShow": true,
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="playlists__list"
>
                <PlaylistCard
                                playlist={
                                                Object {
                                                                "external_urls": Object {
                                                                  "spotify": "mylink",
                                                                },
                                                                "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                                "images": Array [
                                                                  Object {
                                                                    "url": "myotherlink",
                                                                  },
                                                                ],
                                                                "name": "my playlist",
                                                                "owner": Object {
                                                                  "external_urls": Object {
                                                                    "spotify": "owner link",
                                                                  },
                                                                  "id": "ownerid",
                                                                },
                                                              }
                                }
                />
                <PlaylistCard
                                playlist={
                                                Object {
                                                                "external_urls": Object {
                                                                  "spotify": "mylink",
                                                                },
                                                                "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                                "images": Array [
                                                                  Object {
                                                                    "url": "myotherlink",
                                                                  },
                                                                ],
                                                                "name": "dif name",
                                                                "owner": Object {
                                                                  "external_urls": Object {
                                                                    "spotify": "owner link",
                                                                  },
                                                                  "id": "ownerid",
                                                                },
                                                              }
                                }
                />
</div>,
              "className": "playlists__list-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <PlaylistCard
                    playlist={
                                        Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "my playlist",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                    }
/>,
                  <PlaylistCard
                    playlist={
                                        Object {
                                                            "external_urls": Object {
                                                              "spotify": "mylink",
                                                            },
                                                            "id": "6ftJBzU2LLQcaKefMi7ee7",
                                                            "images": Array [
                                                              Object {
                                                                "url": "myotherlink",
                                                              },
                                                            ],
                                                            "name": "dif name",
                                                            "owner": Object {
                                                              "external_urls": Object {
                                                                "spotify": "owner link",
                                                              },
                                                              "id": "ownerid",
                                                            },
                                                          }
                    }
/>,
                ],
                "className": "playlists__list",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "6ftJBzU2LLQcaKefMi7ee7",
                  "nodeType": "class",
                  "props": Object {
                    "playlist": Object {
                      "external_urls": Object {
                        "spotify": "mylink",
                      },
                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                      "images": Array [
                        Object {
                          "url": "myotherlink",
                        },
                      ],
                      "name": "my playlist",
                      "owner": Object {
                        "external_urls": Object {
                          "spotify": "owner link",
                        },
                        "id": "ownerid",
                      },
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "6ftJBzU2LLQcaKefMi7ee7",
                  "nodeType": "class",
                  "props": Object {
                    "playlist": Object {
                      "external_urls": Object {
                        "spotify": "mylink",
                      },
                      "id": "6ftJBzU2LLQcaKefMi7ee7",
                      "images": Array [
                        Object {
                          "url": "myotherlink",
                        },
                      ],
                      "name": "dif name",
                      "owner": Object {
                        "external_urls": Object {
                          "spotify": "owner link",
                        },
                        "id": "ownerid",
                      },
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Playlist component should render loading properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Playlists
    fetchInitialPlaylists={[Function]}
    loadingPlaylists={true}
    loggedUser={null}
    onLogout={[Function]}
    playlists={null}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="playlists__content"
>
        <div
                className="playlists__header"
        >
                <Unknown />
                <UserInfo
                        onLogout={[Function]}
                        user={null}
                />
        </div>
        <div
                className="playlists__filter"
        >
                <TextField
                        disabled={false}
                        floatingLabelFixed={false}
                        fullWidth={true}
                        hintText="Filter"
                        multiLine={false}
                        onChange={[Function]}
                        rows={1}
                        type="text"
                        underlineShow={true}
                        value=""
                />
        </div>
        <div
                className="playlists__list-container"
        >
                <Unknown />
        </div>
</div>,
      "className": "playlists",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="playlists__header"
>
            <Unknown />
            <UserInfo
                        onLogout={[Function]}
                        user={null}
            />
</div>,
          <div
            className="playlists__filter"
>
            <TextField
                        disabled={false}
                        floatingLabelFixed={false}
                        fullWidth={true}
                        hintText="Filter"
                        multiLine={false}
                        onChange={[Function]}
                        rows={1}
                        type="text"
                        underlineShow={true}
                        value=""
            />
</div>,
          <div
            className="playlists__list-container"
>
            <Unknown />
</div>,
        ],
        "className": "playlists__content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Unknown />,
              <UserInfo
                onLogout={[Function]}
                user={null}
/>,
            ],
            "className": "playlists__header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "onLogout": [Function],
                "user": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <TextField
              disabled={false}
              floatingLabelFixed={false}
              fullWidth={true}
              hintText="Filter"
              multiLine={false}
              onChange={[Function]}
              rows={1}
              type="text"
              underlineShow={true}
              value=""
/>,
            "className": "playlists__filter",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "floatingLabelFixed": false,
              "fullWidth": true,
              "hintText": "Filter",
              "multiLine": false,
              "onChange": [Function],
              "rows": 1,
              "type": "text",
              "underlineShow": true,
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Unknown />,
            "className": "playlists__list-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="playlists__content"
>
          <div
                    className="playlists__header"
          >
                    <Unknown />
                    <UserInfo
                              onLogout={[Function]}
                              user={null}
                    />
          </div>
          <div
                    className="playlists__filter"
          >
                    <TextField
                              disabled={false}
                              floatingLabelFixed={false}
                              fullWidth={true}
                              hintText="Filter"
                              multiLine={false}
                              onChange={[Function]}
                              rows={1}
                              type="text"
                              underlineShow={true}
                              value=""
                    />
          </div>
          <div
                    className="playlists__list-container"
          >
                    <Unknown />
          </div>
</div>,
        "className": "playlists",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="playlists__header"
>
              <Unknown />
              <UserInfo
                            onLogout={[Function]}
                            user={null}
              />
</div>,
            <div
              className="playlists__filter"
>
              <TextField
                            disabled={false}
                            floatingLabelFixed={false}
                            fullWidth={true}
                            hintText="Filter"
                            multiLine={false}
                            onChange={[Function]}
                            rows={1}
                            type="text"
                            underlineShow={true}
                            value=""
              />
</div>,
            <div
              className="playlists__list-container"
>
              <Unknown />
</div>,
          ],
          "className": "playlists__content",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Unknown />,
                <UserInfo
                  onLogout={[Function]}
                  user={null}
/>,
              ],
              "className": "playlists__header",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "onLogout": [Function],
                  "user": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <TextField
                disabled={false}
                floatingLabelFixed={false}
                fullWidth={true}
                hintText="Filter"
                multiLine={false}
                onChange={[Function]}
                rows={1}
                type="text"
                underlineShow={true}
                value=""
/>,
              "className": "playlists__filter",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "disabled": false,
                "floatingLabelFixed": false,
                "fullWidth": true,
                "hintText": "Filter",
                "multiLine": false,
                "onChange": [Function],
                "rows": 1,
                "type": "text",
                "underlineShow": true,
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Unknown />,
              "className": "playlists__list-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
